ConstraintTemplateIngressPrevent.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: lbtypesvcnotallowed
spec:
  crd:
    spec:
      names:
        kind: LBTypeSvcNotAllowed
        listKind: LBTypeSvcNotAllowedList
        plural: lbtypesvcnotallowed
        singular: lbtypesvcnotallowed
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission
        violation[{"msg": msg}] {
                    input.review.kind.kind = "INGRESS"
                    input.review.operation = "CREATE"
                    input.review.object.spec.type != ["LoadBalancer","Application Gateway"]
                    msg := "Ingress must be Load Balancer or Application Gateway type"
        }
